[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "itsdangerous>=2.2.0",
    "joblib>=1.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
    "tensorflow>=2.14.0",
    "werkzeug>=3.1.3",
]
